# PersonalMiniEngine

./: CMakeLists.txt  README.md  main.cpp
Engine/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  glad.c  main.cpp
Engine/Editor/: UIManager.cpp  UIManager.h
Engine/Image/: Image.h
Engine/Shader/: FragShader.frag  FragShader.glsl  FragShader.glslinc  LightBoxVert.glsl  VertexShader.glsl  VertexShader.vert  model_loading_frag.glsl
Engine/mesh/: AiModel.cpp  AiModel.h  Mesh.cpp  Mesh.h  MeshData.h  Texture.h
Engine/tools/event/: Event.cpp  Event.h
Engine/tools/util/: Singleton.h
